Week 8 plantuml integration in auto-grader