@@ -10,79 +10,79 @@ gradeModule() {
     case $module in 
         W4dot1|w4dot1|Wk4dot1)
             echo "### Case: 0 should be 0000" >> "${RESULT}"
-            echo "0" | java $javaClass > "$$" 2>&1
+            echo "0" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 1 should be 0001" >> "${RESULT}"
-            echo "1" | java $javaClass > "$$" 2>&1
+            echo "1" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 2 should be 0010" >> "${RESULT}"
-            echo "2" | java $javaClass > "$$" 2>&1
+            echo "2" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 3 should be 0011" >> "${RESULT}"
-            echo "3" | java $javaClass > "$$" 2>&1
+            echo "3" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 4 should be 0100" >> "${RESULT}"
-            echo "4" | java $javaClass > "$$" 2>&1
+            echo "4" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 5 should be 0101" >> "${RESULT}"
-            echo "5" | java $javaClass > "$$" 2>&1
+            echo "5" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 6 should be 0110" >> "${RESULT}"
-            echo "6" | java $javaClass > "$$" 2>&1
+            echo "6" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 7 should be 0111" >> "${RESULT}"
-            echo "7" | java $javaClass > "$$" 2>&1
+            echo "7" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 8 should be 1000" >> "${RESULT}"
-            echo "8" | java $javaClass > "$$" 2>&1
+            echo "8" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: 9 should be 1001" >> "${RESULT}"
-            echo "9" | java $javaClass > "$$" 2>&1
+            echo "9" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: A should be 1010" >> "${RESULT}"
-            echo "A" | java $javaClass > "$$" 2>&1
+            echo "A" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: b should be 1011" >> "${RESULT}"
-            echo "b" | java $javaClass > "$$" 2>&1
+            echo "b" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: C should be 1100" >> "${RESULT}"
-            echo "C" | java $javaClass > "$$" 2>&1
+            echo "C" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: D should be 1101" >> "${RESULT}"
-            echo "D" | java $javaClass > "$$" 2>&1
+            echo "D" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: E should be 1110" >> "${RESULT}"
-            echo "E" | java $javaClass > "$$" 2>&1
+            echo "E" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: F should be 1111" >> "${RESULT}"
-            echo "F" | java $javaClass > "$$" 2>&1
+            echo "F" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: T should be invalid" >> ${RESULT} 
-            echo "T" | java $javaClass > "$$" 2>&1
+            echo "T" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: ':' should be invalid (defined between digits and letters in ASCII)" >> ${RESULT} 
-            echo ":" | java $javaClass > "$$" 2>&1
+            echo ":" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             echo "### Case: <blank> should be invalid" >> "${RESULT}"; 
-            echo "" | java $javaClass > "$$" 2>&1
+            echo "" | java -Djava.security.manager $javaClass > "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             ;;
 
@@ -96,7 +96,7 @@ gradeModule() {
             echo "State tax:     \$90.00" >> "${RESULT}"
             echo "Net pay:      \$710.00" >> "${RESULT}"
             echo "" >> "${RESULT}"
-            printf "Jane Doe\n40\n25\n" | java $javaClass >> "$$" 2>&1
+            printf "Jane Doe\n40\n25\n" | java -Djava.security.manager $javaClass >> "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             
             printf "### Case 2: Now with invalid inputs...\n\n" >> "${RESULT}"
@@ -104,7 +104,7 @@ gradeModule() {
             echo "Hours worked:   -1" >> "${RESULT}"
             echo "Hourly rate:    -1" >> "${RESULT}"
             echo "" >> "${RESULT}"
-            printf "   \n%d\n%d" -1 -1 | java $javaClass >> "$$" 2>&1
+            printf "   \n%d\n%d" -1 -1 | java -Djava.security.manager $javaClass >> "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
 
             printf "### Case 3: Now with invalid numeric inputs...\n\n" >> "${RESULT}"
@@ -112,7 +112,7 @@ gradeModule() {
             echo "Hours worked:   -1" >> "${RESULT}"
             echo "Hourly rate:    -1" >> "${RESULT}"
             echo "" >> "${RESULT}"
-            printf "John Doe\n%d\n%d" -1 -1 | java $javaClass >> "$$" 2>&1
+            printf "John Doe\n%d\n%d" -1 -1 | java -Djava.security.manager $javaClass >> "$$" 2>&1
             indent 4 "$$" >> "${RESULT}"; rm "$$"
             ;;
     esac
